fix alignments

--- a/assignments/lesson-6/styles/large-5.css
+++ b/assignments/lesson-6/styles/large-5.css
@@ -9,6 +9,7 @@
   main > h2 {
     display: block;
     font-size: 2.0rem;
+    padding-top: 30px;
   }
 
   .franklin {
@@ -22,9 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 0px;
+    padding: 20px 0px;
   }
 
   .weather-summary h2 {
@@ -35,11 +34,14 @@
     font-size: 2.2rem;
   }
 
-  .highlow {
-    margin-left: 10%;
-    margin-right: 10%;
+  .current {
+    margin: 0px;
   }
 
+  .highlow {
+    margin-left: 7%;
+    margin-right: 7%;
+  }
   .highlow p, .conditions p {
     width: 225px;
     font-size: 1.3rem;
