--- a/assignments/lesson-6/styles/medium-5.css
+++ b/assignments/lesson-6/styles/medium-5.css
@@ -99,7 +99,6 @@
 
   .weather-type {
     font-size: 2.0rem;
-    line-height: 32px;
   }
 
   .current {
@@ -108,6 +107,7 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
+    padding: 10px 0px;
   }
 
   .current picture {
@@ -118,6 +118,7 @@
   section.forecast {
     display: block;
     margin: auto;
+    clear: both;
   }
 
   .forecast h3 {
